Update project pages, update grid style, improve a11y - Ignore title brs in screen readers - Add title brs to ML2020 & Checkpoint project pages - Fix broken layouts for project pages on iPhone-ish sized screens - Remove uncaught broken CSS line in grid

--- a/src/front/pages/Projects/pages/_index.scss
+++ b/src/front/pages/Projects/pages/_index.scss
@@ -338,3 +338,39 @@
     }
   }
 }
+
+@media (max-width: size.$size-390) {
+  .grid-project {
+    grid-template-columns: 1fr;
+
+    > .btn-triple-group {
+      &.btn-option- {
+        &a,
+        &b,
+        &c {
+          grid-column: auto;
+          grid-row: auto;
+        }
+      }
+    }
+
+    > .subgrid-project-desc {
+      grid-template-columns: 1fr;
+
+      > .btn-triple-group {
+        &.btn-option- {
+          &a,
+          &b,
+          &c {
+            grid-column: auto;
+            grid-row: auto;
+          }
+        }
+      }
+    }
+
+    > .subgrid-project-details {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
